# agent-assembly-line

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  agent-assembly-line.service  pyproject.toml  requirements.txt
.circleci/: config.yml
agent_assembly_line/: __init__.py  agent.py  agent_manager.py  chat_agent.py  config.py  llm_factory.py  memory_assistant.py  rest.py
agent_assembly_line/data_loaders/: bluesky_loader.py  data_loader_factory.py  diff_loader.py  json_loader.py  ocr_loader.py  pdf_loader.py  rest_api_loader.py  rss_feed_loader.py  text_loader.py  web_loader.py  wordpress_loader.py  xml_remote_loader.py
agent_assembly_line/decorators/: agent_decorators.py
agent_assembly_line/micros/: __init__.py  choose_agent_agent.py  clarity_agent.py  diff_details_agent.py  diff_sum_agent.py  fmi_weather_agent.py  intent_agent.py  one_ten_agent.py  one_word_agent.py  sentiment_agent.py  sum_agent.py  test_validator_agent.py  text_cleanup_agent.py  text_cleanup_evaluator.py  website_summary_agent.py  yes_no_agent.py
agent_assembly_line/middleware/: fmi_forecast_parser.py  semantic_test_case.py
agent_assembly_line/models/: document.py
agent_assembly_line/utils/: __init__.py  inspectable_runnable.py  string_utils.py
agents/aethelland-demo/: config.yaml  rag_template.txt
agents/chat-demo/: config.yaml
app/: README.md  package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
app/public/: index.html
app/src/main/: main.ts  (+1 more)
cli-agents/: choose_agent_agent.py  clarity.py  diff_details  diff_message.py  intention.py  one_word.py  sentiment.py  weather.py  website_filter.py  website_summary.py
cli_agents/: choose_agent_agent  clarity  diff_details  diff_message  diff_summary  intention  one_word  sentiment  summarize  very_short_summary  weather  website_filter  website_summary
datasource/aethelland-demo/: config.yaml  rag_template.txt
docs/: README.md
docs/data_loaders/: ocr.md
examples/: advanced_cleanup.py  choose_agent_agent_example.py  clarity_example.py  cleanup_ebook.py  diff_analysis.py  evaluate_cleanup.py  intention_example.py  ocr_example.py  one_word_example.py  pdf_to_markdown.py  sentiment_example.py  summarize_text.py  very_short_summary.py  weather_example.py  website_filter.py  website_summary.py
flows/: proof_refutation_machine.py
micros/: choose_agent_agent.py  clarity_agent.py  diff_details_agent.py  diff_sum_agent.py  fmi_weather_agent.py  intent_agent.py  one_word_agent.py  sentiment_agent.py  sum_agent.py  test_validator_agent.py  website_summary_agent.py  yes_no_agent.py
src/: agent.py  agent_manager.py  chain.py  config.py  exceptions.py  llm_factory.py  memory.py  memory_assistant.py  rest.py  web_loader.py
src/data_loaders/: base_loader.py  data_loader_factory.py  diff_loader.py  json_loader.py  pdf_loader.py  rest_api_loader.py  rss_feed_loader.py  text_loader.py  web_loader.py  xml_remote_loader.py
src/middleware/: base_dict_parser.py  fmi_forecast_parser.py
src/models/: document.py
src/utils/: inspectable_runnable.py  text_splitter.py
tests/: test.py
tests/async/: test.py  test_agent.py  test_agent_manager.py  test_memory.py  test_memory_assistant.py  test_memory_assistant_duplicate_messages.py
tests/llm/: test_agent.py  test_agent_manager.py  test_agent_semantically.py  test_choose_agent_agent.py  test_memory_assistant.py  test_memory_assistant_duplicate_messages.py  test_proof_refutation_agents.py
tests/non-llm/: test_bluesky_loader.py  test_chat_agent.py  test_config.py  test_decorators.py  test_json_loader.py  test_ocr_loader.py  test_one_ten_agent.py  test_pdf_loader.py  test_proof_refutation_logic.py  test_rss_feed_loader.py  test_text_cleanup_agent.py  test_web_loader.py  test_wordpress_loader.py
tests/sync/: test_config.py  test_json_loader.py  test_pdf_loader.py  test_rest_api_loader.py  test_rss_feed_loader.py  test_text_loader.py  test_text_validator.py  test_web_loader.py
tests/test-agent/: config.yaml  rag_template.txt
tests/test_data_loaders/: test_json_loader.py  test_web_loader.py
(+33 files in other folders)
