[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-assembly-line"
version = "0.0.2"
description = "A package for building AI agents that can be easily embedded into existing software stacks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thomas" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "openai==1.68.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-chroma==0.2.2",
    "langchain-ollama==0.3.0",
    "langchain-openai==0.3.11",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "pytest==8.3.5",
    "SQLAlchemy==2.0.39",
    "pip",
    "tomli==2.2.1",
    "unidiff==0.7.5",
    "bs4==0.0.2",
    "selenium==4.30.0",
    "webdriver-manager==4.0.2",
    "xmltodict==0.14.2",
    "aiounittest==1.5.0",
    "newspaper3k==0.2.8",
    "typing-inspect==0.9.0",
    "pydantic==2.10.6",
    "fastapi==0.115.9",
    "atproto==0.0.59",
    "readability-lxml==0.8.1",
    "lxml[html_clean]>=5.3.0",
    "jq==1.8.0",
]

[project.urls]
Homepage = "https://github.com/tm243/agent-assembly-line"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_assembly_line*",
    "agent_assembly_line/agents/chat-demo/*",
    "agent_assembly_line/agents/aethelland-demo",
    ]