[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-assembly-line"
version = "0.0.2"
description = "A package for building AI agents that can be easily embedded into existing software stacks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thomas" }
]
requires-python = ">=3.9,<3.15"
dependencies = [
    "openai>=1.60.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "requests>=2.30.0,<3.0.0",
    "langchain>=0.3.20,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-ollama>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "pytest>=8.0.0,<9.0.0",
    "SQLAlchemy>=2.0.30,<3.0.0",
    "pip",
    "tomli==2.2.1",
    "unidiff==0.7.5",
    "bs4>=0.0.1",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "xmltodict>=0.14.0",
    "aiounittest>=1.5.0",
    "newspaper3k>=0.2.8",
    "typing-inspect>=0.9.0",
    "pydantic>=2.10.0",
    "fastapi>=0.115.0",
    "atproto>=0.0.65",
    "readability-lxml>=0.8.0",
    "lxml[html_clean]>=5.3.0",
    "jq==1.8.0",
]

[project.urls]
Homepage = "https://github.com/tm243/agent-assembly-line"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_assembly_line*",
    "agent_assembly_line/agents/chat-demo/*",
    "agent_assembly_line/agents/aethelland-demo",
    ]